# phala-tutorials

./: README.md
tuto1/: README.md
tuto1/phat-hello/: .gitignore  Cargo.toml  lib.rs
tuto2/: README.md
tuto2/query_indexer/: Cargo.toml  lib.rs
tuto3/: README.md
tuto3/pseudo_random/: Cargo.toml  README.md  lib.rs
